# picore

./: CMakeLists.txt  Makefile  README.md  main.c
audio2h/: go.mod  go.sum  main.go
audio2h/flacs/: amen_1a4f232a_beats8_bpm172.flac  amen_82774d68_beats8_bpm172.flac  amen_a1042fce_beats8_bpm172.flac
